force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/fields/ssot__DoesAllowLedgerTracing__c.field-meta.xml
<CustomField>
    <fullName>ssot__DoesAllowLedgerTracing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Ledger Tracing</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DoesAllowLedgerTracing</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>