force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/fields/ssot__UnitCostAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UnitCostAmount__c</fullName>
    <label>Unit Cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UnitCostAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>